--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <hr style="width: 800px; border: 2px solid #000000; margin-top: -10px;">
   
   
-  <div class="card" style="padding: 10px 20px; font-size: 18px; display: flex; flex-direction: column; align-items: center; text-align: center;" >
+  <div class="card1" style="padding: 10px 20px; font-size: 18px; display: flex; flex-direction: column; align-items: center; text-align: center;" >
 
   <a href="PostCards.html" style="text-decoration: none; color: #e0aec7;">
     <img src="img/giftbox.png" alt="Gift Box" style="width: 100px; height: auto;">
