--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 <body>
 
   <h1 style="font-family: 'Great Vibes', cursive;"> The Birthday Times </h1>
-  <hr style="width: 800px; border: 2px solid #000000; margin-top: -10px;">
+  <hr class="hr-custom">
   <h3 class="date" style="font-family: 'Lucida Blackletter';">SUNDAY, MAY 25, 2025</h3>
-  <hr style="width: 800px; border: 2px solid #000000; margin-top: -10px;">
+  <hr class="hr-custom">
   <h2 class="date" style="font-family: 'Lucida Calligraphy';">CHONEY IS TURNING 21!</h2>
   <div class="card1">
     <img src="img/card1.png" alt="choney">
   </div>
 
-  <hr style="width: 800px; border: 2px solid #000000; margin-top: -10px;">
+  <hr class="hr-custom">
 
   <h4 style="font-family: 'Lucida'">Choney Seldon, born 25/05/2004 at 00:05 (Timezone = GMT +6 hours) in Thimphu, Bhutan</h4>
-  <hr style="width: 800px; border: 2px solid #000000; margin-top: -10px;">
+  <hr class="hr-custom">
   
   
   <div class="card1" style="padding: 10px 20px; font-size: 18px; display: flex; flex-direction: column; align-items: center; text-align: center;" >
