--- a/PostCards.html
+++ b/PostCards.html
@@ -80,7 +80,7 @@
     </div>
   </div>
 
-  <p>Here are few cards i've made. I chose each song carefully and used them for visualising, to make collage of your pictures, and write the letter. I sending you love and good intentions. Love you🫶🏻
+  <p>The songs are carefully chosen and used for visualising, to make collage of your pictures, and to write the letter. I am sending you lots love and good intentions. Love you🫶🏻
     Once again Happy 21st Birthday🎂.
   </p>
 
